Insert a clipping from the shortcut key help window (issue #40)

--- a/src/chrome/skin/shortcutHelp.css
+++ b/src/chrome/skin/shortcutHelp.css
@@ -15,7 +15,7 @@
  *
  * The Initial Developer of the Original Code is 
  * Alex Eng <ateng@users.sourceforge.net>.
- * Portions created by the Initial Developer are Copyright (C) 2014
+ * Portions created by the Initial Developer are Copyright (C) 2014-2015
  * the Initial Developer. All Rights Reserved.
  *
  * Contributor(s):
@@ -36,6 +36,22 @@ toolbar {
 
 toolbarbutton:not(#close) {
   list-style-image: url("chrome://clippings/skin/images/clippingsMgrToolbar.png");
+}
+
+#insert-clipping {
+  -moz-image-region: rect(0px, 208px, 16px, 192px);
+}
+
+#insert-clipping:hover {
+  -moz-image-region: rect(16px, 208px, 32px, 192px);
+}
+
+#insert-clipping:active {
+  -moz-image-region: rect(32px, 208px, 48px, 192px);
+}
+
+#insert-clipping[disabled="true"] {
+  -moz-image-region: rect(48px, 208px, 64px, 192px);
 }
 
 #save {
